--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "documentation": "npx @compodoc/compodoc -p tsconfig.json -s"
+    "documentation": "npx @compodoc/compodoc -p tsconfig.json -s",
+    "com": "npx git-cz"
   },
   "dependencies": {
     "@nestjs/common": "^8.1.1",
@@ -27,6 +28,7 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "cache-manager": "^3.6.0",
+    "git-cz": "^4.8.0",
     "hbs": "^4.2.0",
     "helmet": "^5.0.2",
     "mysql2": "^2.3.3",
@@ -77,5 +79,10 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "config": {
+    "commitizen": {
+      "path": "git-cz"
+    }
   }
 }
