--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.1.1",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.1.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "cache-manager": "^3.6.0",
+    "dotenv": "^16.0.0",
     "git-cz": "^4.8.0",
     "hbs": "^4.2.0",
     "helmet": "^5.0.2",
