--- a/package.json
+++ b/package.json
@@ -28,15 +28,20 @@
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.1.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/passport-local": "^1.0.34",
+    "bcrypt": "^5.0.1",
     "cache-manager": "^3.6.0",
     "dotenv": "^16.0.0",
     "git-cz": "^4.8.0",
     "hbs": "^4.2.0",
     "helmet": "^5.0.2",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.3",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
