--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,6 +3,8 @@ name: PTT_backend/admin CI
 on:
   push:
     branches:
+      - '*'         # matches every branch that doesn't contain a '/'
+      - '*/*'       # matches every branch containing a single '/'
       - '**'        # matches every branch
 
 jobs:
