--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/aws-sdk": "^2.7.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "aws-sdk": "^2.1299.0",
     "bcrypt": "^5.0.1",
     "cache-manager": "^3.6.0",
     "dotenv": "^16.0.0",
