ci: deploy backend infra

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,7 +3,10 @@ name: CI
 on:
   push:
     branches:
-      - '**'        # matches every branch
+      - 'master'    
+  pull_request:
+    branches:
+      - 'master'
 
 jobs:
   ci-test:
