--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@vendia/serverless-express": "^4.10.1",
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1299.0",
-    "bcrypt": "^5.0.1",
+    "aws-serverless-express": "^3.4.0",
+    "bcryptjs": "^2.4.3",
     "cache-manager": "^3.6.0",
     "dotenv": "^16.0.0",
     "git-cz": "^4.8.0",
@@ -51,6 +54,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
+    "serverless-jetpack": "^0.11.1",
+    "serverless-offline": "^12.0.4",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.44"
   },
