--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -42,5 +42,7 @@ jobs:
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
         
-      - name: Serverless Deploy
-        uses: serverless/github-action@v2
+      - name: serverless deploy
+        uses: serverless/github-action@v3.1
+        with:
+          args: deploy
