--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,8 +20,8 @@ jobs:
       AWS_REGION: us-east-1
       AWS_ACCESS_KEY_ID_S3: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY_S3: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_CI_CD }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_CI_CD }}
     steps:
       - name: Clone and checkout branch
         uses: actions/checkout@v2
@@ -46,4 +46,4 @@ jobs:
 
       - name: severless deploy
         run: sls deploy --verbose --force
-
+      
