ci: add frontEnd URI

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -13,6 +13,17 @@ provider:
   runtime: nodejs16.x
   region: us-east-1
   stage: dev
+  environment:
+    mailUser: ${env:MAIL_USER}
+    mailPassword:  ${env:MAIL_PASSWORD}
+    DB_HOST: ${env:DB_HOST}
+    DB_PORT: ${env:DB_PORT}
+    DB_USERNAME: ${env:DB_USERNAME}
+    DB_PASSWORD: ${env:DB_PASSWORD}
+    DB_DATABASE_NAME: ${env:DB_DATABASE_NAME}
+    AWS_ACCESS_KEY_ID_S3: ${env:AWS_ACCESS_KEY_ID_S3}
+    AWS_SECRET_ACCESS_KEY_S3: ${env:AWS_SECRET_ACCESS_KEY_S3}
+    FRONTEND_URI: https://main.d31hn3n8hthsql.amplifyapp.com
   ecr:
     images:
       nest-lambda:
@@ -20,6 +31,17 @@ provider:
 
 functions:
   api:
+    environment:
+      mailUser: ${env:MAIL_USER}
+      mailPassword:  ${env:MAIL_PASSWORD}
+      DB_HOST: ${env:DB_HOST}
+      DB_PORT: ${env:DB_PORT}
+      DB_USERNAME: ${env:DB_USERNAME}
+      DB_PASSWORD: ${env:DB_PASSWORD}
+      DB_DATABASE_NAME: ${env:DB_DATABASE_NAME}
+      AWS_ACCESS_KEY_ID_S3: ${env:AWS_ACCESS_KEY_ID_S3}
+      AWS_SECRET_ACCESS_KEY_S3: ${env:AWS_SECRET_ACCESS_KEY_S3}
+      FRONTEND_URI: https://main.d31hn3n8hthsql.amplifyapp.com
     architecture: arm64
     image:
       name: nest-lambda
@@ -34,13 +56,3 @@ functions:
       - http:
           method: ANY
           path: /{proxy+}
-    environment:
-      mailUser: ${env:MAIL_USER}
-      mailPassword:  ${env:MAIL_PASSWORD}
-      DB_HOST: ${env:DB_HOST}
-      DB_PORT: ${env:DB_PORT}
-      DB_USERNAME: ${env:DB_USERNAME}
-      DB_PASSWORD: ${env:DB_PASSWORD}
-      DB_DATABASE_NAME: ${env:DB_DATABASE_NAME}
-      AWS_ACCESS_KEY_ID_S3: ${env:AWS_ACCESS_KEY_ID_S3}
-      AWS_SECRET_ACCESS_KEY_S3: ${env:AWS_SECRET_ACCESS_KEY_S3}
