--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,49 +1,49 @@
-name: CD
+# name: CD
 
-on:
-  push:
-    branches:
-      - 'master'    
+# on:
+#   push:
+#     branches:
+#       - 'master'    
 
-jobs:
-  cd-deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    env:
-      MAIL_USER: rtmbtourist@gmail.com
-      MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
-      DB_HOST: ${{ secrets.DB_HOST }}
-      DB_PORT: ${{ secrets.DB_PORT }}
-      DB_USERNAME: ${{ secrets.DB_USERNAME }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_DATABASE_NAME: ${{ secrets.DB_DATABASE_NAME }}
-      AWS_REGION: us-east-1
-      AWS_ACCESS_KEY_ID_S3: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY_S3: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_CI_CD }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_CI_CD }}
-    steps:
-      - name: Clone and checkout branch
-        uses: actions/checkout@v2
+# jobs:
+#   cd-deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     env:
+#       MAIL_USER: rtmbtourist@gmail.com
+#       MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
+#       DB_HOST: ${{ secrets.DB_HOST }}
+#       DB_PORT: ${{ secrets.DB_PORT }}
+#       DB_USERNAME: ${{ secrets.DB_USERNAME }}
+#       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#       DB_DATABASE_NAME: ${{ secrets.DB_DATABASE_NAME }}
+#       AWS_REGION: us-east-1
+#       AWS_ACCESS_KEY_ID_S3: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#       AWS_SECRET_ACCESS_KEY_S3: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_CI_CD }}
+#       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_CI_CD }}
+#     steps:
+#       - name: Clone and checkout branch
+#         uses: actions/checkout@v2
 
-      - name: Build
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.14.x
-          cache: 'npm'
-      - run: |
-          npm install
+#       - name: Build
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 16.14.x
+#           cache: 'npm'
+#       - run: |
+#           npm install
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+#       - name: Configure AWS Credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: ${{ env.AWS_REGION }}
         
-      - name: install serverless
-        run: npm i -g serverless
+#       - name: install serverless
+#         run: npm i -g serverless
 
-      - name: severless deploy
-        run: sls deploy --verbose --force
+#       - name: severless deploy
+#         run: sls deploy --verbose --force
       
